[package]
name = "librrb"
version = "0.1.0"
authors = ["Julian Kenwood <nomad010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.5.1"
rand_xoshiro = "0.4.0"
archery = "*"
num = "*"
async-trait = "*"

[dev-dependencies]
proptest = "*"
proptest-derive = "*"
crossbeam = "*"

[features]
may_dangle = []
